@@ -274,7 +274,7 @@ public class RequiredPropertyDeriver extends PropertyDeriverBase<Void, Expressio
         List<Integer> partitionColumnRefSet = new ArrayList<>();
 
         node.getPartitionExpressions().forEach(e -> partitionColumnRefSet
-                .addAll(Arrays.stream(e.getUsedColumns().getColumnIds()).boxed().toList()));
+                .addAll(Arrays.stream(e.getUsedColumns().getColumnIds()).boxed().collect(Collectors.toList())));
         SortProperty sortProperty = SortProperty.createProperty(node.getEnforceOrderBy(), partitionColumnRefSet);
 
         DistributionProperty distributionProperty;
